<resources>
    <string name="app_name">Hestia \'20</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="registered_events">REGISTERED EVENTS</string>
    <string name="logout">Logout</string>
    <string name="event_poster">event_poster</string>
    <string name="accommodation_details">ACCOMMODATION DETAILS</string>
    <string name="logout_prompt">Sure you want to logout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="accommodation_confirmation_text">Dates confirmed for:</string>
    <string name="okay">Okay</string>
    <string name="addParticipantAdv">Add participant %d/%d</string>
    <string name="icon_bed">icon_bed</string>
    <string name="title_activity_home_main">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cal_icon">cal_icon</string>
    <string name="see_schedule">View Schedule</string>
    <string name="top_events">TOP EVENTS</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="our_sponsors">Our Sponsors</string>
    <string name="about_us">About us</string>
    <string name="event_image">event_image</string>
    <string name="icon_arrow">icon_arrow</string>
    <string name="icon">icon</string>
    <string name="all_events">ALL EVENTS</string>
    <string name="welcome">Hey, %s</string>

    <string name="fill_all_details">Fill in all the fields</string>
    <string name="network_error">Network Error Occurred</string>
    <string name="online">Online</string>
    <string name="technical">Technical</string>
    <string name="general">General</string>
    <string name="cultural">Cultural</string>
    <string name="about_hestia">HESTIA\'20 is an extraordinary vision inspired by a great purpose and conceived by a strong spark, which makes one\'s thoughts break bounds, the mind transcends limitations and consciousness, expands in every single direction to empower everyone who nurtures it in a place where nothing and absolutely nothing is impossible.\n\nThis national level techno-managerial cultural symposium is a rendezvous of the brain\'s left and right sides, an amalgamation of all that is science and all that is art, for science and art must embrace each other to triumph the contemporary world\'s challenges. It is technology and innovation acting together, catalysed by creativity and art to create the elixir vitae.\n\nThe goal of HESTIA\'20 is to create the ultimate ensemble of technology, innovation, business, culture and art.</string>
    <string name="error_toast">Can\'t retrieve data at the moment</string>
    <string name="workshop">Workshop</string>

    <string name="prizes_worth">Prizes worth</string>
    <string name="desc_event_image">Event Image</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="schedule">Schedule</string>
    <string name="desc_btnExpand">Expand or Collapse Description</string>
    <string name="contact_details">CONTACT DETAILS</string>

    <string name="buy_ticket">Register</string>
    <string name="booked">Booked</string>
    <string name="sold_out">Sold Out</string>
    <string name="starts_on">Starts on</string>
    <string name="reg_closed">Closed</string>
    <string name="reg_starts_soon">Starts soon</string>

    <string name="addParticipant">Add participant 1/%d</string>
    <string name="add_participant_1_3">Add Participant</string>
    <string name="enter_mail_id">Enter Mail</string>
    <string name="day_1">FEB 27</string>
    <string name="day_2">FEB 28</string>
    <string name="day_3">FEB 29</string>
    <string name="day_4">MAR 01</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_referral_code_here">Enter Referral Code here</string>
    <string name="accommodation_required">Accommodation Required</string>
    <string name="coordinators_for_the_event">Coordinators for the event</string>
    <string name="call">CALL</string>
    <string name="desc_hestia_logo">Hestia logo</string>

    <string name="text1">As a part of HESTIA\'19, the tech summit jointly conducted by IEEE SB TKMCE and IEDC TKMCE presents AAVEGAME -Where your answers wont get you fired with an intention to attain knowledge by adding things everydayand also to attain wisdom by removing things everyday.\n\nRules:\nIf you are someone passionate about exploring the latest advancements in the field of engineering, and have an innate desire to scale up the scope of engineering , then join us, as we present to you a golden opportunity to explore and learn.</string>
    <string name="back_press">Tap back again to exit</string>
    <string name="data_1">28th April 10:00–11:00 (Round 1) 29 April 10:00–01:00 (Round 2) 29th April 03:00–05:00 (Final Round)</string>

    <string name="payment_success">Payment Success</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="free">Free</string>

    <string name="retry">RETRY</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="enter_college_name">Enter College Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="no_events_registered">No Events Registered</string>
    <string name="event_registration">Event Registration</string>
    <string name="participant_list">Participation List</string>
    <string name="select_accommodation_day">Select Accommodation Day</string>
    <string name="add_participant">add participant</string>
    <string name="results">SEE RESULTS</string>
    <string name="submit_s">Submit</string>
</resources>
