<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="live.hestia.app.EventDetailed.ActivityRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="27dp"
                android:layout_marginStart="28dp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/ave_heavy"
                android:text="@string/event_registration" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:background="@color/fieldBg"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="28dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/ave_med"
            android:text="@string/participant_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:background="@color/fieldBg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="28dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/ave_med"
            android:text="@string/referral_code" />

        <EditText
            android:id="@+id/reg_refer"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/enter_referral_code_here"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/ave_heavy"
            android:padding="10dp"
            android:background="@drawable/day_btn_bg" />

        <Button
            android:id="@+id/reg_submit"
            android:layout_marginTop="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:text="@string/submit_s"
            android:fontFamily="@font/ave_heavy"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:layout_marginBottom="27dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_bg" />

    </LinearLayout>
</ScrollView>