<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/content_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/circular_bold"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="19dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="9dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/sponsors_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/ave_heavy"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/our_sponsors"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/about_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:layout_marginBottom="21dp"
                android:fontFamily="@font/ave_heavy"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/about_us"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
